--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@dwidge/wmdb-expo",
+  "name": "@osmiumtech/wmdb-expo",
   "version": "0.0.5",
   "description": "A WatermelonDB adapter for Expo applications.",
-  "repository": "github:dwidge/wmdb-expo",
+  "repository": "github:osmiumtech/wmdb-expo",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/types/index.d.ts",
